Update index.html updated google verification meta tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>That Baker Girl</title>
 
-  <meta name="google-site-verification" content="google1956302f41c72371.html" />
+  <meta name="google-site-verification" content="XkB_pLHn-tXwNKTUouOQjqZvwFUDwWmz-jD-LGw1PZ0" />
 
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
   <style>
