Update index.html added SEO tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>That Baker Girl</title>
 
   <meta name="google-site-verification" content="XkB_pLHn-tXwNKTUouOQjqZvwFUDwWmz-jD-LGw1PZ0" />
+  <meta name="description" content="That Baker Girl - Freshly baked cakes, buns, and more delivered with love. Order now!">
+  <meta name="keywords" content="That Baker Girl, bakery, cakes, korean buns, Bangalore, online bakery">
+  <meta name="author" content="That Baker Girl">
+
 
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
   <style>
