Update index.html added link icons

--- a/index.html
+++ b/index.html
@@ -69,11 +69,18 @@
     </div>
   </div>
 
-  <div class="social-links">
-    <a href="https://www.instagram.com/thatbakergirl.blr/" target="_blank">Instagram</a> |
-    <a href="https://thatbakergirl.mini.store/" target="_blank">Ministore</a> |
-    <a href="https://chat.whatsapp.com/DyAiNEo17Pp6BzpXSyYkTe" target="_blank">Join WhatsApp Updates</a>
+ <div class="social-links">
+    <a href="https://www.instagram.com/thatbakergirl.blr/" target="_blank">
+      <img src="icons/instagram.svg" alt="Instagram" /> Instagram
+    </a>
+    <a href="https://thatbakergirl.mini.store/" target="_blank">
+      <img src="icons/shop.svg" alt="Ministore" /> Ministore
+    </a>
+    <a href="https://chat.whatsapp.com/DyAiNEo17Pp6BzpXSyYkTe" target="_blank">
+      <img src="icons/whatsapp.svg" alt="WhatsApp Updates" /> WhatsApp Updates
+    </a>
   </div>
+
 
   <footer>
     Since 2016
