Update index.html endless scrolling

--- a/index.html
+++ b/index.html
@@ -85,5 +85,9 @@
   <footer>
     Since 2016
   </footer>
+  
+<!-- Carousel Auto-Loop ref -->
+<script src="script.js"></script>
+  
 </body>
 </html>
