--- a/index.html
+++ b/index.html
@@ -26,50 +26,54 @@
     <a href="https://wa.me/919141041707" target="_blank">Place Order</a>
   </div>
 
-  <div class="carousel">
-    <div class="carousel-item">
-      <img src="photos/bentocake.webp" alt="Bento Cake">
-      <div class="carousel-caption">Bento Cake</div>
+   <div class="carousel-container">
+    <button class="carousel-arrow left">&#8249;</button>
+    <div class="carousel">
+      <div class="carousel-item">
+        <img src="photos/bentocake.webp" alt="Bento Cake" />
+        <div class="carousel-caption">Bento Cake</div>
+      </div>
+      <div class="carousel-item">
+        <img src="photos/brownies.webp" alt="Brownies" />
+        <div class="carousel-caption">Brownies</div>
+      </div>
+      <div class="carousel-item">
+        <img src="photos/bundt.webp" alt="Bundt Cake" />
+        <div class="carousel-caption">Bundt Cake</div>
+      </div>
+      <div class="carousel-item">
+        <img src="photos/cinnamonrolls.webp" alt="Cinnamon Rolls" />
+        <div class="carousel-caption">Cinnamon Rolls</div>
+      </div>
+      <div class="carousel-item">
+        <img src="photos/tiramisu.webp" alt="Tiramisu" />
+        <div class="carousel-caption">Tiramisu</div>
+      </div>
+      <div class="carousel-item">
+        <img src="photos/carrotcake.webp" alt="Carrot Cake" />
+        <div class="carousel-caption">Carrot Cake</div>
+      </div>
+      <div class="carousel-item">
+        <img src="photos/chocchunk.webp" alt="Choc Chunk" />
+        <div class="carousel-caption">Choc Chunk</div>
+      </div>
+      <div class="carousel-item">
+        <img src="photos/chocchunkbrownies.webp" alt="Chunky Brownies" />
+        <div class="carousel-caption">Chunky Brownies</div>
+      </div>
+      <div class="carousel-item">
+        <img src="photos/chocoandberries.webp" alt="Chocolate & Berries" />
+        <div class="carousel-caption">Chocolate & Berries</div>
+      </div>
+      <div class="carousel-item">
+        <img src="photos/chocobiscoff.webp" alt="Choco Biscoff" />
+        <div class="carousel-caption">Choco Biscoff</div>
+      </div>
     </div>
-    <div class="carousel-item">
-      <img src="photos/brownies.webp" alt="Brownies">
-      <div class="carousel-caption">Brownies</div>
-    </div>
-    <div class="carousel-item">
-      <img src="photos/bundt.webp" alt="Bundt Cake">
-      <div class="carousel-caption">Bundt Cake</div>
-    </div>
-    <div class="carousel-item">
-      <img src="photos/cinnamonrolls.webp" alt="Cinnamon Rolls">
-      <div class="carousel-caption">Cinnamon Rolls</div>
-    </div>
-    <div class="carousel-item">
-      <img src="photos/tiramisu.webp" alt="Tiramisu">
-      <div class="carousel-caption">Tiramisu</div>
-    </div>
-    <div class="carousel-item">
-      <img src="photos/carrotcake.webp" alt="Carrot Cake">
-      <div class="carousel-caption">Carrot Cake</div>
-    </div>
-    <div class="carousel-item">
-      <img src="photos/chocchunk.webp" alt="Chocolate Chunk Cookies">
-      <div class="carousel-caption">Chocolate Chunk Cookies</div>
-    </div>
-    <div class="carousel-item">
-      <img src="photos/chocchunkbrownies.webp" alt="Chocolate Chunk Brownies">
-      <div class="carousel-caption">Chocolate Chunk Brownies</div>
-    </div>
-    <div class="carousel-item">
-      <img src="photos/chocoandberries.webp" alt="Chocolate and Berries Cake">
-      <div class="carousel-caption">Chocolate & Berries Cake</div>
-    </div>
-    <div class="carousel-item">
-      <img src="photos/chocobiscoff.webp" alt="Choco Biscoff Cake">
-      <div class="carousel-caption">Choco Biscoff Cake</div>
-    </div>
+    <button class="carousel-arrow right">&#8250;</button>
   </div>
 
- <div class="social-links">
+  <div class="social-links">
     <a href="https://www.instagram.com/thatbakergirl.blr/" target="_blank">
       <img src="icons/instagram.svg" alt="Instagram" /> Instagram
     </a>
@@ -77,17 +81,13 @@
       <img src="icons/shop.svg" alt="Ministore" /> Ministore
     </a>
     <a href="https://chat.whatsapp.com/DyAiNEo17Pp6BzpXSyYkTe" target="_blank">
-      <img src="icons/whatsapp.svg" alt="WhatsApp Updates" /> WhatsApp Updates
+      <img src="icons/whatsapp.svg" alt="WhatsApp" /> WhatsApp Updates
     </a>
   </div>
 
+  <footer>Since 2016</footer>
 
-  <footer>
-    Since 2016
-  </footer>
-  
-<!-- Carousel Auto-Loop ref -->
-<script src="script.js"></script>
-  
+  <script src="script.js"></script>
 </body>
 </html>
+
