Update index.html added arrows

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   <p>View our delicious menu and place your order online.</p>
 
   <div class="buttons">
-    <a href="menu.pdf" target="_blank">View Menu</a>
-    <a href="https://wa.me/919141041707" target="_blank">Place Order</a>
+    <a href="menu.pdf" target="_blank">📜 View Menu</a>
+    <a href="https://wa.me/919141041707" target="_blank">📞 Place Order</a>
   </div>
 
-   <div class="carousel-container">
+  <div class="carousel-container">
     <button class="carousel-arrow left">&#8249;</button>
     <div class="carousel">
       <div class="carousel-item">
@@ -81,7 +81,7 @@
       <img src="icons/shop.svg" alt="Ministore" /> Ministore
     </a>
     <a href="https://chat.whatsapp.com/DyAiNEo17Pp6BzpXSyYkTe" target="_blank">
-      <img src="icons/whatsapp.svg" alt="WhatsApp" /> WhatsApp Updates
+      <img src="icons/whatsapp.svg" alt="WhatsApp" /> Bakesale Updates
     </a>
   </div>
 
@@ -90,4 +90,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
