Update index.html lazy loading

--- a/index.html
+++ b/index.html
@@ -26,51 +26,63 @@
     <a href="https://wa.me/919141041707" target="_blank">📞 Place Order</a>
   </div>
 
+  
   <div class="carousel-container">
-   
     <div class="carousel">
       <div class="carousel-item">
-        <img src="photos/bentocake.webp" alt="Bento Cake" />
+        <img src="photos/bentocake.webp" alt="Bento Cake" loading="lazy" />
         <div class="carousel-caption">Bento Cake</div>
       </div>
       <div class="carousel-item">
-        <img src="photos/brownies.webp" alt="Brownies" />
+        <img src="photos/brownies.webp" alt="Brownies" loading="lazy" />
         <div class="carousel-caption">Brownies</div>
       </div>
       <div class="carousel-item">
-        <img src="photos/bundt.webp" alt="Bundt Cake" />
+        <img src="photos/bundt.webp" alt="Bundt Cake" loading="lazy" />
         <div class="carousel-caption">Bundt Cake</div>
       </div>
       <div class="carousel-item">
-        <img src="photos/cinnamonrolls.webp" alt="Cinnamon Rolls" />
+        <img src="photos/cinnamonrolls.webp" alt="Cinnamon Rolls" loading="lazy" />
         <div class="carousel-caption">Cinnamon Rolls</div>
       </div>
       <div class="carousel-item">
-        <img src="photos/tiramisu.webp" alt="Tiramisu" />
+        <img src="photos/tiramisu.webp" alt="Tiramisu" loading="lazy" />
         <div class="carousel-caption">Tiramisu</div>
       </div>
       <div class="carousel-item">
-        <img src="photos/carrotcake.webp" alt="Carrot Cake" />
+        <img src="photos/carrotcake.webp" alt="Carrot Cake" loading="lazy" />
         <div class="carousel-caption">Carrot Cake</div>
       </div>
       <div class="carousel-item">
-        <img src="photos/chocchunk.webp" alt="Choc Chunk" />
+        <img src="photos/chocchunk.webp" alt="Choc Chunk" loading="lazy" />
         <div class="carousel-caption">Choc Chunk</div>
       </div>
       <div class="carousel-item">
-        <img src="photos/chocchunkbrownies.webp" alt="Chunky Brownies" />
+        <img src="photos/chocchunkbrownies.webp" alt="Chunky Brownies" loading="lazy" />
         <div class="carousel-caption">Chunky Brownies</div>
       </div>
       <div class="carousel-item">
-        <img src="photos/chocoandberries.webp" alt="Chocolate & Berries" />
+        <img src="photos/chocoandberries.webp" alt="Chocolate & Berries" loading="lazy" />
         <div class="carousel-caption">Chocolate & Berries</div>
       </div>
       <div class="carousel-item">
-        <img src="photos/chocobiscoff.webp" alt="Choco Biscoff" />
+        <img src="photos/chocobiscoff.webp" alt="Choco Biscoff" loading="lazy" />
         <div class="carousel-caption">Choco Biscoff</div>
       </div>
     </div>
-  
+
+    <div class="carousel-indicators">
+      <span class="dot active"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+    </div>
   </div>
 
   <div class="social-links">
@@ -81,7 +93,7 @@
       <img src="icons/shop.svg" alt="Ministore" /> Ministore
     </a>
     <a href="https://chat.whatsapp.com/DyAiNEo17Pp6BzpXSyYkTe" target="_blank">
-      <img src="icons/whatsapp.svg" alt="WhatsApp" /> Bakesale Updates
+      <img src="icons/whatsapp.svg" alt="WhatsApp" /> WhatsApp Updates
     </a>
   </div>
 
@@ -90,5 +102,4 @@
   <script src="script.js"></script>
 </body>
 </html>
-
 
