Update index.html clickable indicators

--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
       </div>
     </div>
 
-    <div class="carousel-indicators">
-      <span class="dot active"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
+     <div class="carousel-indicators">
+      <span class="dot active" data-index="0"></span>
+      <span class="dot" data-index="1"></span>
+      <span class="dot" data-index="2"></span>
+      <span class="dot" data-index="3"></span>
+      <span class="dot" data-index="4"></span>
+      <span class="dot" data-index="5"></span>
+      <span class="dot" data-index="6"></span>
+      <span class="dot" data-index="7"></span>
+      <span class="dot" data-index="8"></span>
+      <span class="dot" data-index="9"></span>
     </div>
   </div>
 
@@ -93,7 +93,7 @@
       <img src="icons/shop.svg" alt="Ministore" /> Ministore
     </a>
     <a href="https://chat.whatsapp.com/DyAiNEo17Pp6BzpXSyYkTe" target="_blank">
-      <img src="icons/whatsapp.svg" alt="WhatsApp" /> WhatsApp Updates
+      <img src="icons/whatsapp.svg" alt="WhatsApp" /> Bakesale Updates
     </a>
   </div>
 
