Update index.html added banners and insta feed

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
 
   <p>View our delicious menu and place your order online.</p>
 
+  <div class="announcement-banner">
+    🎉 Rakhi Hampers now available! Pre-order on Instagram or WhatsApp to reserve yours.
+  </div>
+
+  <div class="announcement-banner secondary">
+    📢 Next Bake Sale: August 15th – Limited stock! Don't miss out 🍪
+  </div>
+
+  
   <div class="buttons">
     <a href="menu.pdf" target="_blank">📜 View Menu</a>
     <a href="https://wa.me/919141041707" target="_blank">📞 Place Order</a>
@@ -85,6 +94,10 @@
     </div>
   </div>
 
+   <div class="instagram-embed">
+    <iframe src="https://www.instagram.com/thatbakergirl.blr/embed" frameborder="0" allowfullscreen scrolling="no"></iframe>
+  </div>
+  
   <div class="social-links">
     <a href="https://www.instagram.com/thatbakergirl.blr/" target="_blank">
       <img src="icons/instagram.svg" alt="Instagram" /> Instagram
@@ -97,7 +110,7 @@
     </a>
   </div>
 
-  <footer>Since 2016</footer>
+  <footer>Bengaluru Based Cloud Bakery Estd. 2016</footer>
 
   <script src="script.js"></script>
 </body>
