--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
   <p>View our delicious menu and place your order online.</p>
 
   <div class="announcement-banner">
-    🎉 Rakhi Hampers now available! Pre-order on Instagram or WhatsApp to reserve yours.
+    🎉 Rakhi Hampers coming up! Pre-order on Instagram or WhatsApp to reserve yours.
   </div>
-
+  
+<!--
   <div class="announcement-banner secondary">
     📢 Next Bake Sale: August 15th – Limited stock! Don't miss out 🍪
-  </div>
+  </div> 
+  -->
 
   
   <div class="buttons">
@@ -92,10 +94,6 @@
       <span class="dot" data-index="8"></span>
       <span class="dot" data-index="9"></span>
     </div>
-  </div>
-
-   <div class="instagram-embed">
-    <iframe src="https://www.instagram.com/thatbakergirl.blr/embed" frameborder="0" allowfullscreen scrolling="no"></iframe>
   </div>
   
   <div class="social-links">
