Update index.html carousel names changed

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       </div>
       <div class="carousel-item">
         <img src="photos/brownies.webp" alt="Brownies" loading="lazy" />
-        <div class="carousel-caption">Brownies</div>
+        <div class="carousel-caption">Ragi Jaggery Brownies</div>
       </div>
       <div class="carousel-item">
         <img src="photos/bundt.webp" alt="Bundt Cake" loading="lazy" />
-        <div class="carousel-caption">Bundt Cake</div>
+        <div class="carousel-caption">Banana Bundt Cake</div>
       </div>
       <div class="carousel-item">
         <img src="photos/cinnamonrolls.webp" alt="Cinnamon Rolls" loading="lazy" />
@@ -62,15 +62,15 @@
       </div>
       <div class="carousel-item">
         <img src="photos/carrotcake.webp" alt="Carrot Cake" loading="lazy" />
-        <div class="carousel-caption">Carrot Cake</div>
+        <div class="carousel-caption">Carrot Bundt Cake</div>
       </div>
       <div class="carousel-item">
         <img src="photos/chocchunk.webp" alt="Choc Chunk" loading="lazy" />
-        <div class="carousel-caption">Choc Chunk</div>
+        <div class="carousel-caption">Chocolate Bundt Cake</div>
       </div>
       <div class="carousel-item">
         <img src="photos/chocchunkbrownies.webp" alt="Chunky Brownies" loading="lazy" />
-        <div class="carousel-caption">Chunky Brownies</div>
+        <div class="carousel-caption">Signature Brownies</div>
       </div>
       <div class="carousel-item">
         <img src="photos/chocoandberries.webp" alt="Chocolate & Berries" loading="lazy" />
