Update index.html added favicon, moved socials to the top

--- a/index.html
+++ b/index.html
@@ -12,10 +12,23 @@
   
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="thatbakergirlfavicon.png">
+
 </head>
 <body>
   <h1>That Baker Girl</h1>
   
+  <div class="social-links">
+    <a href="https://www.instagram.com/thatbakergirl.blr/" target="_blank">
+      <img src="icons/instagram.svg" alt="Instagram" /> Instagram
+    </a>
+    <a href="https://thatbakergirl.mini.store/" target="_blank">
+      <img src="icons/shop.svg" alt="Ministore" /> Ministore
+    </a>
+    <a href="https://chat.whatsapp.com/DyAiNEo17Pp6BzpXSyYkTe" target="_blank">
+      <img src="icons/whatsapp.svg" alt="WhatsApp" /> Bakesale Updates
+    </a>
+  </div>  
 
   <p>Welcome to your go-to place for artisanal bakes, delivered fresh to your doorstep. From Korean Buns to Celebration cakes, everything is made with love and real butter 🧁</p>
 
@@ -96,21 +109,10 @@
     </div>
   </div>
   
-  <div class="social-links">
-    <a href="https://www.instagram.com/thatbakergirl.blr/" target="_blank">
-      <img src="icons/instagram.svg" alt="Instagram" /> Instagram
-    </a>
-    <a href="https://thatbakergirl.mini.store/" target="_blank">
-      <img src="icons/shop.svg" alt="Ministore" /> Ministore
-    </a>
-    <a href="https://chat.whatsapp.com/DyAiNEo17Pp6BzpXSyYkTe" target="_blank">
-      <img src="icons/whatsapp.svg" alt="WhatsApp" /> Bakesale Updates
-    </a>
-  </div>
+
 
   <footer>Bengaluru Based Cloud Bakery Estd. 2016</footer>
 
   <script src="script.js"></script>
 </body>
 </html>
-
