Update index.html added og tags and better seo opti

--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
   <title>That Baker Girl</title>
   
   <meta name="google-site-verification" content="XkB_pLHn-tXwNKTUouOQjqZvwFUDwWmz-jD-LGw1PZ0" />
-  <meta name="description" content="That Baker Girl - Freshly baked cakes, buns, and more delivered with love. Order now!">
-  <meta name="keywords" content="That Baker Girl, bakery, cakes, korean buns, Bangalore, online bakery">
+
+  <meta name="description" content="That Baker Girl - Homemade and customised cakes, korean buns, cookies, and sweet treats in Bengaluru. Order artisanal baked goods made with love.">
+
+
+  <meta name="keywords" content="That Baker Girl, bakery, Bangalore,Bengaluru, artisanal baking, customised, Premium, korean bun cakes, cookies, brownies, home baker">
   <meta name="author" content="That Baker Girl">
+
+  <meta property="og:title" content="That Baker Girl - Artisanal Bakery in Bengaluru" />
+  <meta property="og:description" content="Homemade bakes crafted with love. Order brownies, korean buns, cakes, and festive hampers online." />
+  <meta property="og:image" content="https://thatbakergirl.com/photos/thatbakergirlfavicon.png" />
+  <meta property="og:url" content="https://thatbakergirl.com" />
+  <meta property="og:type" content="website" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="That Baker Girl - Artisanal Bakery in Bengaluru" />
+<meta name="twitter:description" content="Homemade bakes crafted with love. Order brownies, cakes, and festive hampers online." />
   
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
